WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56244
[EFL] Fix build break because of several reason.
https://bugs.webkit.org/show_bug.cgi?id=56244
Summary
[EFL] Fix build break because of several reason.
Ryuan Choi
Reported
2011-03-11 23:21:50 PST
I got several build breaks. The reasons are below. . Newly added two files are missing (CSSStyleApplyProperty.cpp and StorageTracker.cpp) . iconDatabase was refactored. . listDirectory was implemented but EFL port have it already.
Attachments
Patch
(2.99 KB, patch)
2011-03-11 23:27 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2011-03-11 23:27:08 PST
Created
attachment 85573
[details]
Patch
WebKit Commit Bot
Comment 2
2011-03-12 00:07:31 PST
Comment on
attachment 85573
[details]
Patch Clearing flags on attachment: 85573 Committed
r80929
: <
http://trac.webkit.org/changeset/80929
>
WebKit Commit Bot
Comment 3
2011-03-12 00:07:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug