2011-03-12  Ryuan Choi  <ryuan.choi@samsung.com>

Unreviewed build fix.

        [EFL] Fix build break because of several reason.
        https://bugs.webkit.org/show_bug.cgi?id=56244

        * CMakeLists.txt: Add missing files.
        * platform/posix/FileSystemPOSIX.cpp: Add PLATFORM(EFL).
2011-03-12  Ryuan Choi  <ryuan.choi@samsung.com>

        Unreviewed build fix.

        [EFL] Fix build break because of several reason.
        https://bugs.webkit.org/show_bug.cgi?id=56244

        * ewk/ewk_settings.cpp:
        (ewk_settings_icon_database_path_set):

git-svn-id: svn://svn.chromium.org/blink/trunk@80929 bbb929c8-8fbe-4397-9dbb-9b2b20218538