third_party/WebKit/Source/WebCore/platform/posix/FileSystemPOSIX.cpp
@@ -230,6 +230,7 @@ String directoryName(const String& path)
     return dirname(fsRep.mutableData());
 }
 
+#if !PLATFORM(EFL)
 Vector<String> listDirectory(const String& path, const String& filter)
 {
     Vector<String> entries;
@@ -253,5 +254,6 @@ Vector<String> listDirectory(const String& path, const String& filter)
     }
     return entries;
 }
+#endif
 
 } // namespace WebCore
